reintroduce InterceptDownloadResourceThrottle for some OMA DRM downloads

For OMA DRM downloads, if download descriptor file doesn't exist, Android DownloadManager should be used.
This CL reverts some of the changes in https://codereview.chromium.org/2341643008 to intercept such downloads.

BUG=675559

Review-Url: https://codereview.chromium.org/2642683005
Cr-Commit-Position: refs/heads/master@{#449100}

Former-commit-id: 1dfa16b2126e9776a3e26f00b4c767b83f2645b5