chrome/android/java/src/org/chromium/chrome/browser/download/ChromeDownloadDelegate.java
@@ -311,6 +311,30 @@ public class ChromeDownloadDelegate {
     }
 
     /**
+     * Enqueue a request to download a file using Android DownloadManager.
+     * @param url Url to download.
+     * @param userAgent User agent to use.
+     * @param contentDisposition Content disposition of the request.
+     * @param mimeType MIME type.
+     * @param cookie Cookie to use.
+     * @param referrer Referrer to use.
+     */
+    @CalledByNative
+    private void enqueueAndroidDownloadManagerRequest(String url, String userAgent,
+            String contentDisposition, String mimeType, String cookie, String referrer) {
+        DownloadInfo downloadInfo = new DownloadInfo.Builder()
+                .setUrl(url)
+                .setUserAgent(userAgent)
+                .setContentDisposition(contentDisposition)
+                .setMimeType(mimeType)
+                .setCookie(cookie)
+                .setReferrer(referrer)
+                .setIsGETRequest(true)
+                .build();
+        enqueueDownloadManagerRequest(downloadInfo);
+    }
+
+    /**
      * Called when download starts.
      *
      * @param filename Name of the file.
